Do not try to group an empty set of nodes

We cannot disable the action, since the list of nodes that's
going to be grouped is only available this deep in the function,
so check if there nodes left to group, and if there aren't,
return.

BUG:400072